--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -10,9 +10,7 @@
             <tw-story tags></tw-story>
             <tw-storydata name="wonder-demo" startnode="1" creator="TwineWonder" creator-version="2.3.8" ifid="993B579C-CE55-436E-95BA-EA224BA8A4A7" zoom="1" format="Wonder" format-version="0.6.12" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">this.coins = 0;
 
-//Wonder.parentApi().enable();
-
-//Wonder.enableExternalApi(false);
+Wonder.enableExternalApi(true);
 Wonder.autoSave(false);// отключить автосохранение
 Wonder.autoLoad(false);// отключить автозагрузку
 
