--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -10,7 +10,7 @@
             <tw-story tags></tw-story>
             <tw-storydata name="wonder-demo" startnode="21" creator="TwineWonder" creator-version="2.3.8" ifid="993B579C-CE55-436E-95BA-EA224BA8A4A7" zoom="1" format="Wonder" format-version="0.6.19" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">this.coins = 0;
 
-Wonder.enableExternalApi(false);
+Wonder.enableExternalApi(true);
 
 Wonder.jsUrl('./assets/test.js', ()=> {
     console.log('hello after test js load');
